created games folder. added new sql for the database to comunicate with the application

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "username": "root",
         "password": "UNSCmember117",
-        "database": "chess_db",
+        "database": "games_db",
         "host": "localhost",
         "dialect": "mysql"
     },
